fix image visibility bug

--- a/src/app/products/products.css
+++ b/src/app/products/products.css
@@ -60,8 +60,8 @@
 
 .product-card img {
   width: 100%;
-  height: auto;
-  object-fit: cover;
+  height: 250px; 
+  object-fit: cover; 
   border-bottom: 1px solid #eee;
 }
 
